document must be set modified when range name is defined, fdo#79451

Change-Id: I382bef9b95d40a1abac993795e8da540b5aa5d18
(cherry picked from commit 1c8babfdb0808318bbaa94e911c819456a65337e)